--- a/style.css
+++ b/style.css
@@ -6,7 +6,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+.contanir{
+    max-width: 1140;
+    margin: 0 auto;
+    background-color: #f5f7fc;
+}
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+ 
 
 
 .noto_saris {
@@ -118,4 +131,32 @@ nav ul li a {
   margin: 30px 0;
   border: none;
   max-width: 270px;
+}
+
+/* flower plants section style  */
+.flower_plants {
+  display: flex;
+  gap: 110px;
+  margin-top: 120px;
+  position: relative;
+}
+.plant_img {
+  max-width: 50%;
+}
+
+.flower_text h4 {
+  font-size: 3.12rem;
+  line-height: 76px;
+  max-width: 400px;
+}
+.flower_text ul li {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 1.37rem;
+  padding: 25px 0;
+}
+.img_logo {
+  position: absolute;
+  top: -136px;
+  left: 355px;
+  width: 286px;
 }
